--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -40,9 +40,9 @@ jobs:
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 
-      - name: Test with unittest
+      - name: Test with pytest
         run: |
-          python -m unittest discover
+          pytest.exe .\app\app\test.py
   # Build and push the Docker image
   push_to_registry:
     name: Build and push Docker image to Docker Hub
