--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,7 +31,8 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8
-          if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+          pip install -r requirements.txt
+          pip install -e .
       - name: Lint the code with flake8
         run: |
           # stop the build if there are Python syntax errors or undefined names
@@ -40,8 +41,7 @@ jobs:
           flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       - name: Test with pytest
         run: |
-          pip install pytest pytest-cov
-          python -m pytest
+          python -m pytest --import-mode=append tests/
   # Build and push the Docker image
   push_to_registry:
     name: Build and push Docker image to Docker Hub
