--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,4 +10,4 @@ services:
     volumes:
       - ./app:/app
     command: >
-      sh -c "python main.py"
+      sh -c "python producer.py && python views.py"
